@@ -1,12 +1,14 @@
-*.pyc
-__pycache__
-src/*.egg-info
-
+.coverage
+.idea
 .installed.cfg
 .tox
 bin
 build
+coverage.xml
 develop-eggs
-parts
-.idea
 eggs
+parts
+
+*.pyc
+__pycache__
+src/*.egg-info
