@@ -1,0 +1,12 @@
+language: python
+sudo: false
+python:
+  - 2.7
+install:
+  - pip install tox-travis coveralls
+script:
+  - tox
+notifications:
+    email: false
+after_success:
+  - coveralls
