@@ -1,4 +1,20 @@
+================================
+Shoobx WfMC-based Process Engine
+================================
+
+.. image:: https://travis-ci.org/Shoobx/shoobx.wfmc.png?branch=master
+   :target: https://travis-ci.org/Shoobx/shoobx.wfmc
+
+.. image:: https://coveralls.io/repos/github/Shoobx/shoobx.wfmc/badge.svg?branch=master
+   :target: https://coveralls.io/github/Shoobx/shoobx.wfmc?branch=master
+
+.. image:: https://img.shields.io/pypi/v/shoobx.wfmc.svg
+    :target: https://pypi.python.org/pypi/shoobx.wfmc
+
+.. image:: https://img.shields.io/pypi/pyversions/shoobx.wfmc.svg
+    :target: https://pypi.python.org/pypi/shoobx.wfmc/
+
 This package provides an implementation of a Workflow-Management
-Coalition (WFMC) workflow engine.  The engine is provided as a
-collection of workflow process components.  Workflow processes can be
+Coalition (WFMC) workflow engine. The engine is provided as a
+collection of workflow process components. Workflow processes can be
 defined in Python or via the XML Process-Definition Language, XPDL.
