@@ -1,0 +1,23 @@
+[tox]
+envlist = py27
+
+[testenv]
+commands =
+    zope-testrunner -vpc1 --all --test-path ./src
+deps =
+    .[test]
+    zope.testing==4.1.3
+    zope.testrunner
+
+[testenv:py27]
+# Python 2.7 is the designated coverage report run.
+basepython = python2.7
+passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
+commands =
+    coverage erase
+    coverage run {envbindir}/zope-testrunner -vpc1 --all --test-path ./src
+    coverage xml
+    coverage report -m
+deps =
+    {[testenv]deps}
+    coverage
