@@ -1,10 +1,12 @@
-=======
 CHANGES
 =======
 
-
 4.0.0 (unreleased)
 ------------------
+
+- Renamed from `zope.wfmc` to `shoobx.wfmc`.
+
+- Added support for community CI and coverage tools.
 
 - Raise an exception on duplicate `ExtendedAttribute` `Name` in a single
   `ExtendedAttributes` container
@@ -60,6 +62,7 @@ CHANGES
 - Support for reading XPDL-2.1 added
 
 - Added reading Pools and Lanes from XPDL
+
 
 3.5.0 (2009-07-24)
 ------------------
